--- a/sistemas.html
+++ b/sistemas.html
@@ -240,6 +240,27 @@
             background: linear-gradient(90deg, #1976d2 0%, #4fc3f7 100%);
             box-shadow: 0 4px 16px rgba(33,150,243,0.18);
         }
+        #login-form-fields button[type="submit"] {
+            display: block;
+            margin: 18px auto 0 auto;
+            padding: 12px 0;
+            background: linear-gradient(90deg, #4fc3f7 0%, #1976d2 100%);
+            color: #fff;
+            border: none;
+            border-radius: 7px;
+            font-size: 1.1em;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background 0.2s, box-shadow 0.2s;
+            box-shadow: 0 2px 8px rgba(33,150,243,0.10);
+            width: 70%;
+            max-width: 180px;
+            text-align: center;
+        }
+        #login-form-fields button[type="submit"]:hover {
+            background: linear-gradient(90deg, #1976d2 0%, #4fc3f7 100%);
+            box-shadow: 0 4px 16px rgba(33,150,243,0.18);
+        }
         @media (max-width: 700px) {
             main {
                 padding: 0 5px;
