--- a/FLM.html
+++ b/FLM.html
@@ -236,10 +236,12 @@
             cursor: pointer;
             transition: background 0.2s, box-shadow 0.2s;
             box-shadow: 0 2px 8px rgba(33,150,243,0.10);
-        }
-        .register-form button[type="submit"]:hover {
-            background: linear-gradient(90deg, #1976d2 0%, #4fc3f7 100%);
-            box-shadow: 0 4px 16px rgba(33,150,243,0.18);
+            display: block;           /* Centraliza horizontalmente */
+            margin-left: auto;        /* Centraliza horizontalmente */
+            margin-right: auto;       /* Centraliza horizontalmente */
+            width: 70%;               /* Opcional: largura agradável */
+            max-width: 180px;         /* Opcional: largura máxima */
+            text-align: center;       /* Opcional: centraliza texto */
         }
         #login-form-fields button[type="submit"] {
             display: block;
@@ -316,6 +318,15 @@
         <div id="header-buttons">
             <button id="open-login-modal" class="header-btn">Login</button>
             <button id="open-register-modal" class="header-btn">Cadastro</button>
+            <div id="user-profile-area" style="display:none;align-items:center;gap:10px;position:relative;">
+                <button id="user-profile-btn" class="header-btn" style="display:flex;align-items:center;gap:8px;padding:8px 18px;">
+                    <span id="user-profile-icon" style="font-size:1.2em;">👤</span>
+                    <span id="user-profile-name"></span>
+                </button>
+                <div id="profile-dropdown" style="display:none;position:absolute;top:48px;right:0;background:#fff;border-radius:8px;box-shadow:0 2px 12px rgba(0,0,0,0.13);padding:10px 0;min-width:140px;z-index:1001;">
+                    <button id="logout-btn" style="background:none;border:none;width:100%;text-align:left;padding:10px 18px;font-size:1em;color:#1976d2;cursor:pointer;">Sair</button>
+                </div>
+            </div>
         </div>
     </nav>
     <div class="navbar-space"></div>
@@ -406,15 +417,6 @@
                 </label>
                 <button type="submit">Entrar</button>
             </form>
-        </div>
-    </div>
-    <div id="user-profile-area">
-        <button id="user-profile-btn" class="header-btn" style="display:flex;align-items:center;gap:8px;padding:8px 18px;">
-            <span id="user-profile-icon" style="font-size:1.2em;">👤</span>
-            <span id="user-profile-name"></span>
-        </button>
-        <div id="profile-dropdown">
-            <button id="logout-btn">Sair</button>
         </div>
     </div>
     <script src="funcionalidadejs.js"></script>
