atualização readme e barra de navegação

--- a/FLM.html
+++ b/FLM.html
@@ -301,7 +301,7 @@
     </style>
 </head>
 <body>
-    <!-- Barra de navegação fixa -->
+    <!-- Barra de navegação fixa com todas as funcionalidades do index.html -->
     <nav class="navbar">
         <a href="index.html" class="navbar-logo">
             <img src="./assets/logoppd.jpeg" alt="Logo do site Ponto de Partida Dev.">
