--- a/progwebmob.html
+++ b/progwebmob.html
@@ -303,7 +303,7 @@
     </style>
 </head>
 <body>
-    <!-- Barra de navegação fixa -->
+    <!-- Barra de navegação fixa com todas as funcionalidades do index.html -->
     <nav class="navbar">
         <a href="index.html" class="navbar-logo">
             <img src="./assets/logoppd.jpeg" alt="Logo do site Ponto de Partida Dev.">
@@ -320,6 +320,15 @@
         <div id="header-buttons">
             <button id="open-login-modal" class="header-btn">Login</button>
             <button id="open-register-modal" class="header-btn">Cadastro</button>
+            <div id="user-profile-area" style="display:none;align-items:center;gap:10px;position:relative;">
+                <button id="user-profile-btn" class="header-btn" style="display:flex;align-items:center;gap:8px;padding:8px 18px;">
+                    <span id="user-profile-icon" style="font-size:1.2em;">👤</span>
+                    <span id="user-profile-name"></span>
+                </button>
+                <div id="profile-dropdown" style="display:none;position:absolute;top:48px;right:0;background:#fff;border-radius:8px;box-shadow:0 2px 12px rgba(0,0,0,0.13);padding:10px 0;min-width:140px;z-index:1001;">
+                    <button id="logout-btn" style="background:none;border:none;width:100%;text-align:left;padding:10px 18px;font-size:1em;color:#1976d2;cursor:pointer;">Sair</button>
+                </div>
+            </div>
         </div>
     </nav>
     <div class="navbar-space"></div>
