--- a/sistemas.html
+++ b/sistemas.html
@@ -263,6 +263,42 @@
             background: linear-gradient(90deg, #1976d2 0%, #4fc3f7 100%);
             box-shadow: 0 4px 16px rgba(33,150,243,0.18);
         }
+        /* Estilos para os botões de acessibilidade */
+        .acessibilidade-btns {
+            position: fixed;
+            bottom: 16px;
+            left: 16px;
+            top: auto;
+            right: auto;
+            z-index: 9999;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+        .acess-btn {
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            background: linear-gradient(90deg, #4fc3f7 0%, #1976d2 100%);
+            color: #fff;
+            border: none;
+            border-radius: 7px;
+            padding: 6px 12px;
+            font-size: 0.93em;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(33,150,243,0.10);
+            transition: background 0.2s, box-shadow 0.2s, transform 0.15s;
+            outline: none;
+        }
+        .acess-btn:hover, .acess-btn:focus {
+            background: linear-gradient(90deg, #1976d2 0%, #4fc3f7 100%);
+            box-shadow: 0 4px 16px rgba(33,150,243,0.18);
+            transform: translateY(-2px) scale(1.04);
+        }
+        .acess-btn-text {
+            display: inline;
+        }
         @media (max-width: 700px) {
             main {
                 padding: 0 5px;
@@ -295,6 +331,17 @@
             }
             .navbar-space {
                 height: 60px;
+            }
+            .acessibilidade-btns {
+                bottom: 8px;
+                left: 8px;
+            }
+            .acess-btn {
+                padding: 5px 8px;
+                font-size: 0.85em;
+            }
+            .acess-btn-text {
+                display: none;
             }
         }
     </style>
@@ -412,9 +459,39 @@
             </form>
         </div>
     </div>
+    <!-- Botões de acessibilidade estilizados com funcionalidade de audiodescrição -->
+    <div class="acessibilidade-btns">
+        <button class="acess-btn" id="btn-audiodescricao" title="Ativar audiodescrição">
+            <span aria-hidden="true" style="font-size:1.2em;vertical-align:middle;">🔊</span>
+            <span class="acess-btn-text">Audiodescrição</span>
+        </button>
+        <button class="acess-btn" id="btn-parar-audiodescricao" title="Parar audiodescrição">
+            <span aria-hidden="true" style="font-size:1.2em;vertical-align:middle;">⏹️</span>
+            <span class="acess-btn-text">Parar</span>
+        </button>
+    </div>
     <footer>
         &copy; 2025 Ponto de Partida Dev. Todos os direitos reservados.
     </footer>
     <script src="funcionalidadejs.js"></script>
+    <script>
+        function iniciarAudiodescricao() {
+            let texto = "";
+            const header = document.querySelector("header");
+            if (header) texto += header.innerText + ". ";
+            const main = document.querySelector("main");
+            if (main) texto += main.innerText;
+            if (texto.trim() === "") return;
+            const synth = window.speechSynthesis;
+            const utterThis = new SpeechSynthesisUtterance(texto);
+            utterThis.lang = "pt-BR";
+            synth.speak(utterThis);
+        }
+        function pararAudiodescricao() {
+            window.speechSynthesis.cancel();
+        }
+        document.getElementById('btn-audiodescricao').addEventListener('click', iniciarAudiodescricao);
+        document.getElementById('btn-parar-audiodescricao').addEventListener('click', pararAudiodescricao);
+    </script>
 </body>
 </html>
